--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==16:00:42=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==16:02:31=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1886.35</p>
+                <p id="net-worth">1918.35</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+196.50</p>
+                <p id="realized-pl-value">+214.75</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-382.25</p>
+                <p id="unrealized-pl-value">-368.50</p>
             </div>
         </div>
     </header>
@@ -112,14 +112,14 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
--Closed Order-
+BuyLimit: 17575.25
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:13.75</h2>
--Closed Order-
+            <h2 id="column2-title">MESM24</h2>
+
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-368.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-368.0</h2>
 
         </div>
         <div class="column">
