--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==16:19:12=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==16:23:52=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1913.35</p>
+                <p id="net-worth">1911.85</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-373.50</p>
+                <p id="unrealized-pl-value">-375.00</p>
             </div>
         </div>
     </header>
@@ -112,23 +112,25 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
+--
 BuyLimit: 17575.25
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24</h2>
+            <h2 id="column2-title">MNQM24</h2>
+--
+BuyLimit: 17575.25
+        </div>
+        <div class="column">
+            <h2 id="column3-title">MESM24</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-373.0</h2>
+            <h2 id="column4-title">M2KM24==P/L:-374.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">MCLK24</h2>
+            <h2 id="column5-title">MCLK24</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
-            <p id="stocks-content-5d">{{stocks-content-5}}</p>
         </div>
         <div class="column">
             <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
