--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==17:57:53=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==17:59:41=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
@@ -112,14 +112,14 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
-
+BuyLimit: 5048.0
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
-
+BuyLimit: 5048.0
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-370.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-366.0</h2>
 
         </div>
         <div class="column">
