--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==18:50:06=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==18:51:52=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1914.35</p>
+                <p id="net-worth">1913.35</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-372.50</p>
+                <p id="unrealized-pl-value">-373.50</p>
             </div>
         </div>
     </header>
@@ -113,12 +113,12 @@
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
 10 5
-Entry Long Entry Long Entry Long Open
+Entry Short Entry Short Entry Long Open
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
 6 5
-Entry Long Entry Long Entry Long Open
+Entry Short Entry Short Entry Long Open
         </div>
         <div class="column">
             <h2 id="column3-title">M2KM24==P/L:-373.5</h2>
