--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==19:06:13=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==19:10:05=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1907.35</p>
+                <p id="net-worth">1907.85</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-379.50</p>
+                <p id="unrealized-pl-value">-379.00</p>
             </div>
         </div>
     </header>
@@ -113,15 +113,15 @@
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
 10 5
-Entry Short Entry Short Entry Long Open
+Entry Short Entry Short Entry Short Open
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
 6 5
-Entry Short Entry Short Entry Long Open
+Entry Short Entry Short Entry Short Open
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-380.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-378.0</h2>
 
         </div>
         <div class="column">
