--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==05:39:13=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==05:45:40=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1827.25</p>
+                <p id="net-worth">1824.25</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-430.00</p>
+                <p id="unrealized-pl-value">-433.00</p>
             </div>
         </div>
     </header>
@@ -112,35 +112,41 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
+--
 BuyLimit: 5027.25
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
+--
 BuyLimit: 5027.25
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-431.5</h2>
+            <h2 id="column3-title">MNQM24</h2>
+--
+BuyLimit: 5027.25
+        </div>
+        <div class="column">
+            <h2 id="column4-title">MESM24</h2>
+--
+BuyLimit: 5027.25
+        </div>
+        <div class="column">
+            <h2 id="column5-title">MNQM24</h2>
+--
+BuyLimit: 5027.25
+        </div>
+        <div class="column">
+            <h2 id="column6-title">MESM24</h2>
+--
+BuyLimit: 5027.25
+        </div>
+        <div class="column">
+            <h2 id="column7-title">M2KM24==P/L:-435.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">MCLK24</h2>
+            <h2 id="column8-title">MCLK24</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
-            <p id="stocks-content-5d">{{stocks-content-5}}</p>
-        </div>
-        <div class="column">
-            <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
-            <p id="stocks-content-6d">{{stocks-content-6}}</p>
-        </div>
-        <div class="column">
-            <h2 id="column7-title">{{COLUMN7_TITLE}}</h2>
-            <p id="stocks-content-7d">{{stocks-content-7}}</p>
-        </div>
-        <div class="column">
-            <h2 id="column8-title">{{COLUMN8_TITLE}}</h2>
-            <p id="stocks-content-8d">{{stocks-content-8}}</p>
         </div>
         <div class="column">
             <h2 id="column9-title">{{COLUMN9_TITLE}}</h2>
