--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==11:04:39=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==11:06:35=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1885.75</p>
+                <p id="net-worth">1902.75</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">0.00</p>
+                <p id="realized-pl-value">+8.50</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-371.50</p>
+                <p id="unrealized-pl-value">-363.00</p>
             </div>
         </div>
     </header>
@@ -113,18 +113,17 @@
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
 SellLimit: 17359.0
-BuyLimit: 17354.25
         </div>
         <div class="column">
-            <h2 id="column2-title">MNQM24==P/L:8.0</h2>
-BuyLimit: 17354.25
+            <h2 id="column2-title">MNQM24==P/L:-2.5</h2>
+
         </div>
         <div class="column">
             <h2 id="column3-title">MESM24</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-364.5</h2>
+            <h2 id="column4-title">M2KM24==P/L:-359.5</h2>
 
         </div>
         <div class="column">
