--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==11:20:07=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==11:22:01=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1955.75</p>
+                <p id="net-worth">1951.25</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+27.50</p>
+                <p id="realized-pl-value">+63.00</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-329.00</p>
+                <p id="unrealized-pl-value">-369.00</p>
             </div>
         </div>
     </header>
@@ -111,15 +111,15 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:31.5</h2>
-BuyLimit: 17342.5
+            <h2 id="column1-title">MNQM24</h2>
+SellLimit: 17359.0
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-362.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-366.0</h2>
 
         </div>
         <div class="column">
