--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==11:58:36=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==12:00:34=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1965.25</p>
+                <p id="net-worth">1967.75</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-355.00</p>
+                <p id="unrealized-pl-value">-352.50</p>
             </div>
         </div>
     </header>
@@ -116,10 +116,10 @@ SellLimit: 17359.0
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
-
+SellLimit: 5032.5
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-359.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-349.5</h2>
 
         </div>
         <div class="column">
