--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==13:32:31=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==13:33:55=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1952.00</p>
+                <p id="net-worth">1954.00</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-376.00</p>
+                <p id="unrealized-pl-value">-374.00</p>
             </div>
         </div>
     </header>
@@ -112,23 +112,24 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
-
+SellLimit: 5018.25
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
+SellLimit: 5018.25
+BuyLimit: 5021.0
+        </div>
+        <div class="column">
+            <h2 id="column3-title">MESM24==P/L:1.25</h2>
+BuyLimit: 5021.0
+        </div>
+        <div class="column">
+            <h2 id="column4-title">M2KM24==P/L:-372.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-374.0</h2>
+            <h2 id="column5-title">MCLK24</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column4-title">MCLK24</h2>
-
-        </div>
-        <div class="column">
-            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
-            <p id="stocks-content-5d">{{stocks-content-5}}</p>
         </div>
         <div class="column">
             <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
