--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==13:45:05=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==13:46:46=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1961.50</p>
+                <p id="net-worth">1951.50</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+77.75</p>
+                <p id="realized-pl-value">+77.25</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-373.50</p>
+                <p id="unrealized-pl-value">-383.00</p>
             </div>
         </div>
     </header>
@@ -112,23 +112,23 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
-SellLimit: 5018.25
+SellLimit: 17261.5
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24</h2>
-SellLimit: 5018.25
-        </div>
-        <div class="column">
-            <h2 id="column3-title">MESM24==P/L:-6.25</h2>
+            <h2 id="column2-title">MESM24==P/L:-10.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-372.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-367.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column5-title">MCLK24</h2>
+            <h2 id="column4-title">MCLK24</h2>
 
+        </div>
+        <div class="column">
+            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
+            <p id="stocks-content-5d">{{stocks-content-5}}</p>
         </div>
         <div class="column">
             <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
